# server-websocket

./: .gitignore  Cargo.toml  README  README.md  cert.pem  key.pem
.github/workflows/: ci.yml
src/: main.rs
src/api/: handler.rs
src/message/: message.rs  mod.rs
src/middleware/: api_key.rs
src/server/: message.rs  mod.rs  web_socket.rs
src/state/: app_state.rs
