[package]
name = "server-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web-actors = "4.3.0"
actix-web = "4.8.0"
actix-files = "0.6.4"
actix-multipart="0.6.1"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.117"
uuid = {version="1.9.1", features = ["v4"]}
futures = "0.3.30"
